<?xml version="1.0"?>
<package format="3">
  <name>dataset_player</name>
  <version>0.1.0</version>
  <description>Play datasets per-frame radar bin files as ROS2 topics.</description>
  <maintainer email="yni5@crimson.ua.edu">yni5</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
