<?xml version="1.0"?>
<package format="3">
  <name>radar_rviz</name>
  <version>0.1.0</version>
  <description>RViz2 config and demo launch for radar odometry.</description>
  <maintainer email="yni5@crimson.ua.edu">yni5</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
